# Sumatra

./: .gitignore  CMakeLists.txt  MRFSurfaceReconstruction.cpp  MRFSurfaceReconstruction.h  README.md  vtkDistanceFieldMRFRegularisation.cxx  vtkDistanceFieldMRFRegularisation.h
Installer/: CreateInstaller.bat  README.md
Installer/config/: config.xml
forms/: computenormalsdlg.ui  connectivitydlg.ui  createprimitivedlg.ui  decimatedlg.ui  featureedgesdlg.ui  mainwindow.ui  manipulateobjectdlg.ui  objectpropertiesdlg.ui  savefiledlg.ui  smoothdlg.ui  subdividedlg.ui
include/: 3DScene.h  BloomenthalPolygonizer.h  CMakeCache.txt  ColorManager.h  CustomMultiTextureOBJImporter.h  GELRemeshing.h  GeneralUtils.h  ImplicitFunctionUtils.h  LandMark.h  LandmarkCollection.h  MemoryUtils.h  MeshMeasures.h  MultiTimer.h  Process3DData.h  SumatraSettings.h  SurfaceProperties.h  computenormalsdlg.h  connectivitydlg.h  createprimitivedlg.h  decimatedlg.h  featureedgesdlg.h  mainwindow.h  manipulateobjectdlg.h  objectpropertiesdlg.h  savefiledlg.h  scenewidget.h  smoothdlg.h  subdividedlg.h  vtkConstrainedICPTransform.h  vtkCropPolyData.h  vtkDistanceFieldMRFRegularisation.h  vtkExtMisc.h  vtkLandmarkTransformDirectQuart.h  vtkOrientedPointSetDistanceFilter.h  vtkOrientedPointSetDistanceFilter2.h  vtkPolyDataDifference.h  vtkPolyDataMarkCoveredCells.h  vtkPolyDataMarkUsingVolume.h  vtkPolyDataOrientNormalsByVoting.h  vtkPolyDataPCANormals.h  (+13 more)
resources/: resources.qrc
settings/: SumatraSettings.json
src/: 3DScene.cpp  BloomenthalPolygonizer.cpp  ColorManager.cpp  CustomMultiTextureOBJImporter.cpp  GELRemeshing.cpp  GeneralUtils.cpp  ImplicitFunctionUtils.cpp  LandMark.cpp  LandmarkCollection.cpp  MRFSurfaceReconstruction.cpp  MemoryUtils.cpp  MeshMeasures.cpp  MultiTimer.cpp  Process3DData.cpp  SumatraSettings.cpp  SurfaceProperties.cpp  computenormalsdlg.cpp  connectivitydlg.cpp  createprimitivedlg.cpp  decimatedlg.cpp  featureedgesdlg.cpp  mainwindow.cpp  manipulateobjectdlg.cpp  objectpropertiesdlg.cpp  savefiledlg.cpp  scenewidget.cpp  smoothdlg.cpp  subdividedlg.cpp  sumatramain.cpp  vtkConstrainedICPTransform.cxx  vtkCropPolyData.cxx  vtkExtMisc.cpp  vtkLandmarkTransformDirectQuart.cxx  vtkOrientedPointSetDistanceFilter.cxx  vtkOrientedPointSetDistanceFilter2.cxx  vtkPolyDataDifference.cpp  vtkPolyDataMarkCoveredCells.cxx  vtkPolyDataMarkUsingVolume.cxx  vtkPolyDataOrientNormalsByVoting.cxx  vtkPolyDataPCANormals.cxx  (+13 more)
windows/: Sumatra.rc
